fix scrollbar

--- a/src/os/static/styles/common/scrollbar.os.less
+++ b/src/os/static/styles/common/scrollbar.os.less
@@ -1,7 +1,7 @@
 .scrollbar {
   overflow: auto; // To let lazyload realize the container
   &:hover {
-    overflow: overlay; // Avoid scrollbar occupying space
+    overflow: overlay !important; // Avoid scrollbar occupying space
   }
 }
 
